@@ -3,7 +3,7 @@ MAINTAINERCLEANFILES = Makefile.in
 SUBDIRS = history matching
 
 localedir = $(datadir)/locale
-INCLUDES = -I$(top_builddir) -I$(srcdir) -I$(top_srcdir) -I$(top_srcdir)/src
+AM_CPPFLAGS = -I$(top_builddir) -I$(srcdir) -I$(top_srcdir) -I$(top_srcdir)/src
 DEFS = -DLOCALEDIR=\"$(localedir)\" @DEFS@
 LDADD = @LIBINTL@
 
