@@ -1,4 +1,4 @@
-INCLUDES=-I$(top_builddir) -I$(top_srcdir) -I$(top_srcdir)/src -I$(top_srcdir)/intl
+AM_CPPFLAGS=-I$(top_builddir) -I$(top_srcdir) -I$(top_srcdir)/src -I$(top_srcdir)/intl
 
 noinst_LIBRARIES = libgeneric-views-mocks.a
 libgeneric_views_mocks_a_SOURCES = \
