@@ -4,6 +4,11 @@
 
 - Bug fixes:
 
+- Internal changes:
+
+  * Change INCLUDES to AM_CPPFLAGS in automake files to avoid warning:
+    "'INCLUDES' is the old name for 'AM_CPPFLAGS' (or '*_CPPFLAGS')"
+
 - Documentation:
 
 - Translation updates:
